--- a/app/src/main/res/layout/about.xml
+++ b/app/src/main/res/layout/about.xml
@@ -19,8 +19,8 @@
         android:layout_margin="30dp"
         android:textSize="15dp"
         android:text="       - This App Developed For Specific user
-      to think new QUOTES than write on this
-      application."
+      to think about new QUOTES than write
+      on this application."
         android:id="@+id/detail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
